--- a/main.html
+++ b/main.html
@@ -8,6 +8,46 @@
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 	</head>
 	<body>
+		<button type="button" class="btn btn-danger" data-toggle="modal" data-target="#signupModal">
+    Sign Up
+</button>
+		<div class="modal fade" id="signupModal" tabindex="-1" role="dialog" aria-labelledby="signupModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="signupModalLabel">Create Account</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <!-- Email input field -->
+                <div class="form-group">
+                    <label for="emailInput">Email address</label>
+                    <input type="email" class="form-control" id="emailInput" placeholder="Enter email" required>
+                    <small class="form-text text-muted">Your information is safe with us.</small>
+                </div>
+                <!-- Password input field -->
+                <div class="form-group">
+                    <label for="passwordInput">Password</label>
+                    <input type="password" class="form-control" id="passwordInput" placeholder="Password" required>
+                </div>
+                <!-- Confirm Password input field -->
+                <div class="form-group">
+                    <label for="confirmPasswordInput">Confirm Password</label>
+                    <input type="password" class="form-control" id="confirmPasswordInput" placeholder="Confirm Password" required>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <!-- Submit button -->
+                <button type="submit" class="btn btn-primary">Submit</button>
+                <!-- Close button -->
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+
 	
 	</body>
 </html>
