--- a/main.html
+++ b/main.html
@@ -41,9 +41,10 @@
             <div class="modal-footer">
                 <!-- Submit button -->
                 <button type="submit" class="btn btn-primary">Submit</button>
-                <!-- Close button -->
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-            </div>
+                <!-- Close button 
+                <button type="button" class="btn btn-secondary" data-dismiss="modal"></button>
+           -->
+			</div>
         </div>
     </div>
 </div>
