--- a/main.html
+++ b/main.html
@@ -11,6 +11,7 @@
 		<button type="button" class="btn btn-danger" data-toggle="modal" data-target="#signupModal">
     Sign Up
 </button>
+		<form>
 		<div class="modal fade" id="signupModal" tabindex="-1" role="dialog" aria-labelledby="signupModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
@@ -48,6 +49,7 @@
         </div>
     </div>
 </div>
+			</form>
 
 	
 	</body>
