--- a/main.html
+++ b/main.html
@@ -40,7 +40,7 @@
                 </div>
             </div>
             <div class="modal-footer">
-        
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                 <button type="submit" class="btn btn-success">Submit</button>
                 
 			</div>
